feat: Landing Page RAW

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
-.App {
-  text-align: center;
-}
+/* Auth Page */
 
+/* .App-landing {
+  position: relative;
+} */
+
+/* Headers and Logo */
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -26,13 +29,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
