--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 body {
-  margin: 0;
+  margin: 0px;
   background-image: url('./images/background.jpg');
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #E2E2E2;
 }
 
 code {
