--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ code {
 }
 
 .TeamBox {
-  height: 60%;
+  height: 60vh;
+  overflow-y: scroll;
+}
+
+.resultsBox {
+  height: 100vh;
   overflow-y: scroll;
 }
