--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 body {
   margin: 0px;
+  height: 100vh;
   color: #E2E2E2;
   background-image: url('./images/background.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -16,6 +20,22 @@ code {
 .TeamBox {
   height: 60vh;
   overflow-y: scroll;
+}
+
+.playerRow {
+  border-bottom: 1px solid #ebeced;
+  text-align: left;
+  margin: 5px 0;
+  display: flex;
+  align-items: center;
+}
+
+.playerImage {
+  margin-right: 10px;
+}
+
+.playerContent {
+  padding: 10px;
 }
 
 .resultsBox {
