--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,6 @@
 body {
   margin: 0px;
   height: 100vh;
-  color: #E2E2E2;
-  background-image: url('./images/background.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
   overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -20,14 +15,16 @@ code {
 .TeamBox {
   height: 60vh;
   overflow-y: scroll;
+  cursor: pointer;
 }
 
 .playerRow {
-  border-bottom: 1px solid #ebeced;
+  border-bottom: 1px solid #ebeced2c;
   text-align: left;
   margin: 5px 0;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .playerImage {
